feat: Added User and Order Billing info mechanism & Improved Staff Order management
Authenticated users can have multiple billing info, and have a single default.
Guest users can't. So, they would have to fill in their billing info manually on the order.

Staffs are allowed to update an Order status to Shipped, Delivered or Cancelled only.
This allows them to easily track users' orders.
